添加电影基架，添加模型数据，调用，删除数据的方法/通过依赖注入将数据模型注入到控制器中

--- a/ASP.NET Core Web Demo/ASP.NET Core Web Demo/appsettings.json
+++ b/ASP.NET Core Web Demo/ASP.NET Core Web Demo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ASPNET_Core_Web_DemoContext": "Server=(localdb)\\mssqllocaldb;Database=ASPNET_Core_Web_DemoContext-36abc7c7-da55-4d8a-ae02-de97dcf286da;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
