--- a/ASP.NET Core Web Demo/ASP.NET Core Web Demo/ASP.NET Core Web Demo.csproj
+++ b/ASP.NET Core Web Demo/ASP.NET Core Web Demo/ASP.NET Core Web Demo.csproj
@@ -7,4 +7,13 @@
     <RootNamespace>ASP.NET_Core_Web_Demo</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
+  </ItemGroup>
+
 </Project>
